[tool.poetry]
name = "alert-battery-to-maintain-health"
version = "1.0.0"
description = "Alerts you if your battery is overcharged or discharged to extend its performance and health."
authors = ["Andros Fenollosa <andros@fenollosa.email>"]

[tool.poetry.dependencies]
python = "^3.9"
notify-py = "^0.3.3"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
